--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+    tools:context=".DetailActivity"
+    android:background="#000000">
 
     <TextView
         android:id="@+id/tv_ratings"
@@ -12,21 +13,23 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="88dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Ratings"
         android:textAlignment="textStart"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.229"
-        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
         app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />
 
     <TextView
         android:id="@+id/title_background"
         android:layout_width="match_parent"
         android:layout_height="172dp"
-        android:background="#607D8B"
+        android:background="#35454D"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,19 +53,6 @@
         app:layout_constraintTop_toTopOf="@+id/title_background"
         app:layout_constraintVertical_bias="0.768" />
 
-    <ImageView
-        android:id="@+id/iv_movie_poster"
-        android:layout_width="175dp"
-        android:layout_height="158dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="TODO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_background" />
-
     <TextView
         android:id="@+id/tv_release_date"
         android:layout_width="wrap_content"
@@ -71,11 +61,9 @@
         android:layout_marginTop="52dp"
         android:text="Release Date"
         android:textAlignment="textStart"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
-        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
         app:layout_constraintTop_toBottomOf="@+id/title_background" />
 
     <TextView
@@ -85,6 +73,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -92,5 +81,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
         app:layout_constraintVertical_bias="0.05" />
+
+    <ImageView
+        android:id="@+id/iv_movie_poster"
+        android:layout_width="183dp"
+        android:layout_height="188dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="TODO"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_background" />
 
 </android.support.constraint.ConstraintLayout>
