--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="88dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="Ratings"
+        android:text="@string/layout_testing"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="8dp"
-        android:text="testing"
+        android:text="@string/layout_testing"
         android:textAlignment="center"
         android:textSize="50sp"
         android:textColor="#FFFFFF"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:layout_marginTop="52dp"
-        android:text="Release Date"
+        android:text="@string/layout_testing"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -75,7 +75,7 @@
         android:layout_marginStart="8dp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@string/layout_testing"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
         android:layout_height="188dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/layout_testing"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_background" />
