--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -94,6 +94,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_background" />
 
+        <Button
+            android:id="@+id/b_add_to_favorites"
+            android:layout_width="95dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorAccent"
+            android:onClick="addToFavorites"
+            android:text="@string/favorites_label"
+            android:textStyle="bold|italic"
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toStartOf="@+id/tv_ratings"
+            app:layout_constraintTop_toBottomOf="@+id/tv_ratings"
+            tools:textColor="#FFFFFF" />
+
         <TextView
             android:id="@+id/tv_trailers_label"
             android:layout_width="90dp"
